--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=R612eascx4204
 spring.jpa.hibernate.ddl-auto=create
